<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/route_name_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/group_bottom_line_background"
        android:text="@string/route_name"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/like_ib"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:contentDescription="@string/like"
        android:src="@drawable/ic_favorite_border"
        app:layout_constraintBottom_toBottomOf="@id/route_name_tv"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/direction_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/direction"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/direction_name_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/route_name_tv" />

    <TextView
        android:id="@+id/next_bus_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/next_bus_arrival"
        app:layout_constraintEnd_toStartOf="@+id/next_bus_arrival_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/direction_tv" />

    <TextView
        android:id="@+id/current_delay_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/current_delay"
        app:layout_constraintEnd_toStartOf="@id/delay_variable_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/next_bus_tv" />

    <TextView
        android:id="@+id/delay1_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delay"
        app:layout_constraintEnd_toStartOf="@id/delay_variable1_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_delay_tv" />
    <TextView
        android:id="@+id/delay2_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delay"
        app:layout_constraintEnd_toStartOf="@id/delay_variable2_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delay1_tv" />
    <TextView
        android:id="@+id/delay3_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delay"
        app:layout_constraintEnd_toStartOf="@id/delay_variable3_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delay2_tv" />
    <TextView
        android:id="@+id/delay4_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delay"
        app:layout_constraintEnd_toStartOf="@id/delay_variable4_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delay3_tv" />
    <TextView
        android:id="@+id/delay5_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delay"
        app:layout_constraintEnd_toStartOf="@id/delay_variable5_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delay4_tv" />
    <TextView
        android:id="@+id/delay6_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delay"
        app:layout_constraintEnd_toStartOf="@id/delay_variable6_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delay5_tv" />
    <TextView
        android:id="@+id/delay7_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/delay"
        app:layout_constraintEnd_toStartOf="@id/delay_variable7_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delay6_tv" />
    <TextView
        android:id="@+id/delay_aver_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/aver"
        app:layout_constraintEnd_toStartOf="@id/delay_aver_variable_tv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/delay7_tv" />

    <TextView
        android:id="@+id/direction_name_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/direction_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/direction_tv" />

    <TextView
        android:id="@+id/next_bus_arrival_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/next_bus_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/next_bus_tv" />

    <TextView
        android:id="@+id/delay_variable_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/current_delay_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/current_delay_tv" />


    <TextView
        android:id="@+id/delay_variable1_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/delay1_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delay1_tv" />
    <TextView
        android:id="@+id/delay_variable2_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/delay2_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delay2_tv" />
    <TextView
        android:id="@+id/delay_variable3_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/delay3_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delay3_tv" />
    <TextView
        android:id="@+id/delay_variable4_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/delay4_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delay4_tv" />
    <TextView
        android:id="@+id/delay_variable5_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/delay5_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delay5_tv" />
    <TextView
        android:id="@+id/delay_variable6_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/delay6_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delay6_tv" />
    <TextView
        android:id="@+id/delay_variable7_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/delay6_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delay6_tv" />
    <TextView
        android:id="@+id/delay_aver_variable_tv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/delay_aver_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/delay_aver_tv" />


    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        app:barrierDirection="start"
        android:background="@drawable/group_bottom_line_vertical_background"
        app:constraint_referenced_ids="direction_name_tv, next_bus_arrival_tv, delay_variable_tv" />


</androidx.constraintlayout.widget.ConstraintLayout>